Fix result screen

--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
             <p class="red">Você precisa de:</p>
             <img src="./assets/back.svg" id="back" onclick="reset()" alt="Voltar">
             <div class="input-group" id="inputs_p2">
-                <div class="input-group-image">
+                <div class="input-group-image-p2">
                     <img class="img" src="./assets/images/meat-icons/meat.png" alt="">
-                    <input type="text" id="result-meat">
+                    <h1></h1>
                 </div>
-                <div class="input-group-image">
+                <div class="input-group-image-p2">
                     <img class="img" src="./assets/images/meat-icons/chicken.png" alt="">
-                    <input type="text" id="result-chicken">
+                    <h1></h1>
                 </div>
-                <div class="input-group-image">
+                <div class="input-group-image-p2">
                     <img class="img" src="./assets/images/meat-icons/coke.png" alt="">
-                    <input type="text" id="result-coke">
+                    <h1></h1>
                 </div>
-                <div class="input-group-image">
+                <div class="input-group-image-p2">
                     <img class="img" src="./assets/images/meat-icons/beer.png" alt="">
-                    <input type="text" id="result-beer">
+                    <h1></h1>
                 </div>
             </div>
             <button>COMPARTILHAR</button>
