--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 <body>
     <div class="app">
-
         <header>
             <h1>Churrascômetro</h1>
             <img src="./assets/garden-barbecue-.svg" alt="Logo">
@@ -24,27 +23,34 @@
             <div class="input-group" id="inputs">
                 <div class="input-group-image">
                     <img src="./assets/dad.svg" alt="">
-                    <input id="nHomens" name="Nº de Homens" onfocusout="setDefaultValue(this)" autocomplete="off" type="number" placeholder="Nº de Homens">
+                    <input id="nHomens" name="Nº de Homens" onfocusout="setDefaultValue(this)" autocomplete="off"
+                        type="number" placeholder="Nº de Homens">
                 </div>
                 <div class="input-group-image">
                     <img src="./assets/woman.svg" alt="">
-                    <input id="nMulheres" name="Nº de Mulheres" onfocusout="setDefaultValue(this)" autocomplete="off" type="number" placeholder="Nº de Mulheres">
+                    <input id="nMulheres" name="Nº de Mulheres" onfocusout="setDefaultValue(this)" autocomplete="off"
+                        type="number" placeholder="Nº de Mulheres">
                 </div>
                 <div class="input-group-image">
                     <img src="./assets/baby-boy.svg" alt="">
-                    <input id="nCriancas" name="Nº de Crianças" onfocusout="setDefaultValue(this)" autocomplete="off" type="number" placeholder="Nº de Crianças">
+                    <input id="nCriancas" name="Nº de Crianças" onfocusout="setDefaultValue(this)" autocomplete="off"
+                        type="number" placeholder="Nº de Crianças">
                 </div>
                 <div class="input-group-image">
                     <img src="./assets/clock.svg" alt="">
-                    <input id="nDuracao" name="Tempo de duração" onfocusout="setDefaultValue(this)" autocomplete="off" type="number" placeholder="Tempo de duração (horas)">
+                    <input id="nDuracao" name="Tempo de duração" onfocusout="setDefaultValue(this)" autocomplete="off"
+                        type="number" placeholder="Tempo de duração (horas)">
                 </div>
             </div>
             <p>O que terá no churrasco?</p>
             <div class="meat-icons" id="meat-icons">
                 <img onclick="enableMeatIcon(this)" id="carne" src="./assets/images/meat-icons/meat.png" alt="Carne">
-                <img onclick="enableMeatIcon(this)" id="frango" src="./assets/images/meat-icons/chicken.png" alt="Frango">
-                <img onclick="enableMeatIcon(this)" id="refri" src="./assets/images/meat-icons/coke.png" alt="Refrigerante">
-                <img onclick="enableMeatIcon(this)" id="cerveja" src="./assets/images/meat-icons/beer.png" alt="Cerveja">
+                <img onclick="enableMeatIcon(this)" id="frango" src="./assets/images/meat-icons/chicken.png"
+                    alt="Frango">
+                <img onclick="enableMeatIcon(this)" id="refri" src="./assets/images/meat-icons/coke.png"
+                    alt="Refrigerante">
+                <img onclick="enableMeatIcon(this)" id="cerveja" src="./assets/images/meat-icons/beer.png"
+                    alt="Cerveja">
             </div>
             <button onclick="recuperarValoresChurrasco(this)">CHURRASCAR</button>
         </div>
