--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400&display=swap"
         rel="stylesheet">
     <link rel="shortcut icon" href="./assets/garden-barbecue-.svg" type="image/x-icon">
+    <!-- Hotjar Tracking Code for https://churrascometro.netlify.app/ -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 2152035, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
     <title>Churrascômetro</title>
 </head>
 
