add print button

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h1></h1>
                 </div>
             </div>
-            <button>COMPARTILHAR</button>
+            <button onclick="print()">IMPRIMIR</button>
         </div>
 
     </div>
