modifying footer text

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
     </div>
-    <footer>Desenvolvido com ❤ por Antônio Vinícius</footer>
+    <footer>Desenvolvido com &#9829; por Antônio Vinícius</footer>
     <script src="./script.js"></script>
 </body>
 
